<resources>
    <string name="app_name">MDE2</string>
    <string name="txt1">Texto 1</string>
    <string name="txt2">Texto 2</string>
    <string name="Send">Enviar</string>
    <string name="titleDialog">Google Wifi</string>
    <string name="opc1">Mostrar Contraseña</string>
    <string name="opc2">Mostrar Opciones Avanzadas</string>
    <string name="btn2">Cancelar</string>
    <string name="btn3">Conectar</string>
    <string name="contrase_a">Contraseña</string>
</resources>
